site/src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
    height: 100svh;
    font-family: 'Cabin', Arial, sans-serif;
}

@layer utilities {
    /* Please apply "custom-scrollbar" class for scrollable elements 
    (elements with class of overflow-scroll or overflow-auto) */
    .custom-scrollbar {
        scrollbar-width: thin;
        scrollbar-color: #cccccc white;

        &::-webkit-scrollbar {
            width: 4px;
        }

        &::-webkit-scrollbar-track {
            background: white;
        }

        &::-webkit-scrollbar-thumb {
            background-color: #cccccc;
            border-radius: 8px;
        }

        &::-webkit-scrollbar-corner {
            background: rgba(0, 0, 0, 0);
        }
    }

    html.dark .custom-scrollbar {
        scrollbar-width: thin;
        scrollbar-color: #3F475A #151922;

        &::-webkit-scrollbar {
            width: 4px;
        }

        &::-webkit-scrollbar-track {
            background: #151922;
        }

        &::-webkit-scrollbar-thumb {
            background-color: #3F475A;
            border-radius: 8px;
        }
    }
}

